k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth
  template:
    metadata:
      labels:
        component: auth
    spec:
      containers:
        - name: auth
          image: thejstranger/mal-auth
          imagePullPolicy: Never
          ports:
            - containerPort: 5321
