k8s/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: email
  template:
    metadata:
      labels:
        component: email
    spec:
      containers:
        - name: email
          image: thejstranger/mal-email
