k8s/activemq-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-cluster-service
spec:
  type: ClusterIP
  selector:
    component: activemq
  ports:
    - port: 61616
      targetPort: 61616
