k8s/api-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 4321
      targetPort: 4321
