k8s/auth-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 5321
      targetPort: 5321
