k8s/db-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-cluster-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
